[tool.poetry]
name = "adventcode2020"
version = "0.1.0"
description = ""
authors = ["James Ross <james.i.ross5@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.1.2"
ipython = "^7.19.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
